--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script>
+      if (import.meta.env.NNODE_ENV === 'production') {
+        const s = document.createElement('script');
+        s.async = true;
+        s.src = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-545003449135220877";
+        s.crossOrigin = "anonymous";
+        document.head.appendChild(s);
+      }
+    </script>
+
     <title>Vite + React</title>
   </head>
   <body>
